# Zangbeto

./: .gitignore  Cargo.toml  Diagnostic.jl  Makefile  SPEC.md  omo_diagnostic.py  package.json  requirements.txt  todo  todo.md
crates/consensus-bft/: Cargo.toml
crates/crdt-memory/: Cargo.toml
crates/crdt-memory/src/: lib.rs
crates/crypto-kernel/: Cargo.toml
crates/crypto-kernel/src/: lib.rs
crates/omo-diagnostic/: Cargo.toml
crates/omo-diagnostic/src/: agent.rs  lib.rs  zangbeto_client.rs
crates/omo-diagnostic/src/agent/: archive.rs  courts.rs  diagnostic_handler.rs  sandbox.rs
crates/omo-kernel/: Cargo.toml
crates/omo-kernel/src/: lib.rs
crates/omo-kernel/src/audit/: mod.rs  zangbeto.rs
crates/omo-kernel/src/kernel/: css.rs  diff.rs  engine.rs  mod.rs  orisha.rs  validators.rs
crates/omo-kernel/src/zangbeto/: drift.rs  event.rs  ir.rs  (+4 more)
crates/policy-runtime/: Cargo.toml
crates/policy-runtime/src/: lib.rs
crates/replay-engine/: Cargo.toml
crates/replay-engine/src/: lib.rs
crates/vm-core/: Cargo.toml
crates/vm-core/src/: ir.rs
crates/zangbeto-enforcement/: Cargo.toml
crates/zangbeto-enforcement/specs/: ENFORCEMENT_SPEC.md
crates/zangbeto-enforcement/src/: action_ladder.rs  anomaly.rs  arbitration.rs  daemon.rs  lib.rs  quarantine.rs  receipts.rs  rollback.rs
julia/: ZangbetoOracle.jl
shrine/examples/: payments.move  test_diagnostic.move
shrine/sources/: zbt_core.move  zbt_diagnostics.move  zbt_errors.move  zbt_guard.move  zbt_v2.move
wasm-policies/esu_constraints/: Cargo.toml
wasm-policies/esu_constraints/src/: lib.rs
