[package]
name = "policy-runtime"
version = "0.4.0"
edition = "2021"

[dependencies]
vm-core = { path = "../vm-core" }
crypto-kernel = { path = "../crypto-kernel" }
crdt-memory = { path = "../crdt-memory" }
wasmtime = "15.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
thiserror = "1.0"
