[package]
name = "replay-engine"
version = "0.4.0"
edition = "2021"

[dependencies]
vm-core = { path = "../vm-core" }
crypto-kernel = { path = "../crypto-kernel" }
policy-runtime = { path = "../policy-runtime" }
crdt-memory = { path = "../crdt-memory" }
ed25519-dalek = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
